@@ -85,6 +85,7 @@ Chronological list of authors
   - Vedant Rathore
   - Xiki Tempula
   - Akshay Gupta
+  - Juan Eiros Zamora
 
 External code
 -------------
