@@ -368,6 +368,15 @@ class GroupBase(_MutableBase):
                 "".format(name.capitalize(), len(self), name,
                 "s"[len(self)==1:])) # Shorthand for a conditional plural 's'.
 
+    def __str__(self):
+        name = self.level.name
+        if len(self) <= 10:
+            return '<{}Group {}>'.format(name.capitalize(), repr(list(self)))
+        else:
+            return '<{}Group {}, ..., {}>'.format(name.capitalize(),
+                                                  repr(list(self)[:3])[:-1],
+                                                  repr(list(self)[-3:])[1:])
+
     def __add__(self, other):
         """Concatenate the Group with another Group or Component of the same
         level.
@@ -1649,8 +1658,6 @@ class ResidueGroup(GroupBase):
     specific to ResidueGroups.
 
     """
-    def __repr__(self):
-        return '<ResidueGroup {}>'.format(repr(list(self.residues)))
 
     @property
     def atoms(self):
@@ -1748,8 +1755,6 @@ class SegmentGroup(GroupBase):
     SegmentGroups.
 
     """
-    def __repr__(self):
-        return '<SegmentGroup {}>'.format(repr(list(self.segments)))
 
     @property
     def atoms(self):
