@@ -20,6 +20,8 @@ The rules for this file:
   * 0.16.0
 
 Enhancements
+  * Improved __str__ and __repr__ of 'GroupBase' class in
+    MDAnalysis.core.groups (addresses Issue #1223)
   * Added dynamic selections (addresses Issues #175 and #1074).
   * Added 'MemoryReader' class to allow manipulation of trajectory data
     in-memory, which can provide substantial speed-ups to certain
